kubernetes/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - name: hello-container
        image: ghcr.io/alex1x/hello-service:latest
        ports:
        - containerPort: 8400
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  ports:
  - port: 8400
    targetPort: 8400
  selector:
    app: hello-service
